Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -3367,33 +3367,19 @@
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrameOutport.__init__">(ivwdataframe.DataFrameOutport method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataPointBase.__init__">(ivwdataframe.DataPointBase method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.__init__">(ivwdataframe.DoubleColumn method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleDataPoint.__init__">(ivwdataframe.DoubleDataPoint method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.__init__">(ivwdataframe.FloatColumn method)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatDataPoint.__init__">(ivwdataframe.FloatDataPoint method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.IndexColumn.__init__">(ivwdataframe.IndexColumn method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.__init__">(ivwdataframe.Int64Column method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64DataPoint.__init__">(ivwdataframe.Int64DataPoint method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn.__init__">(ivwdataframe.IntColumn method)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntDataPoint.__init__">(ivwdataframe.IntDataPoint method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn.__init__">(ivwdataframe.Size_tColumn method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tDataPoint.__init__">(ivwdataframe.Size_tDataPoint method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn.__init__">(ivwdataframe.UIntColumn method)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntDataPoint.__init__">(ivwdataframe.UIntDataPoint method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -3799,7 +3785,21 @@
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.TouchStatesIterator.__iter__">(inviwopy.TouchStatesIterator method)</a>
 </li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.CategoricalColumn.__iter__">(ivwdataframe.CategoricalColumn method)</a>
+</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.__iter__">(ivwdataframe.DataFrame method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.__iter__">(ivwdataframe.DoubleColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.__iter__">(ivwdataframe.FloatColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.__iter__">(ivwdataframe.Int64Column method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn.__iter__">(ivwdataframe.IntColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn.__iter__">(ivwdataframe.Size_tColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn.__iter__">(ivwdataframe.UIntColumn method)</a>
 </li>
       </ul></li>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.dmat2.__itruediv__">__itruediv__() (inviwopy.glm.dmat2 method)</a>
@@ -5531,31 +5531,17 @@
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.__repr__">(ivwdataframe.DataFrame method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataPointBase.__repr__">(ivwdataframe.DataPointBase method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.__repr__">(ivwdataframe.DoubleColumn method)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleDataPoint.__repr__">(ivwdataframe.DoubleDataPoint method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.__repr__">(ivwdataframe.FloatColumn method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatDataPoint.__repr__">(ivwdataframe.FloatDataPoint method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.__repr__">(ivwdataframe.Int64Column method)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64DataPoint.__repr__">(ivwdataframe.Int64DataPoint method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn.__repr__">(ivwdataframe.IntColumn method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntDataPoint.__repr__">(ivwdataframe.IntDataPoint method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn.__repr__">(ivwdataframe.Size_tColumn method)</a>
 </li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tDataPoint.__repr__">(ivwdataframe.Size_tDataPoint method)</a>
-</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn.__repr__">(ivwdataframe.UIntColumn method)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntDataPoint.__repr__">(ivwdataframe.UIntDataPoint method)</a>
 </li>
       </ul></li>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.dmat2.__rmul__">__rmul__() (inviwopy.glm.dmat2 method)</a>
@@ -7560,20 +7546,6 @@
         <li><a href="_generated/inviwopy.html#inviwopy.PathType.Data">(inviwopy.PathType attribute)</a>
 </li>
       </ul></li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleDataPoint.data">data (ivwdataframe.DoubleDataPoint property)</a>
-
-      <ul>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatDataPoint.data">(ivwdataframe.FloatDataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64DataPoint.data">(ivwdataframe.Int64DataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntDataPoint.data">(ivwdataframe.IntDataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tDataPoint.data">(ivwdataframe.Size_tDataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntDataPoint.data">(ivwdataframe.UIntDataPoint property)</a>
-</li>
-      </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferFlatMultiInport.data">data() (inviwopy.data.BufferFlatMultiInport method)</a>
 
       <ul>
@@ -7792,8 +7764,6 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.DataMapper">DataMapper (class in inviwopy.data)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataPointBase">DataPointBase (class in ivwdataframe)</a>
-</li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.DataMapper.dataRange">dataRange (inviwopy.data.DataMapper property)</a>
 
       <ul>
@@ -8001,8 +7971,6 @@
 </li>
       </ul></li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn">DoubleColumn (class in ivwdataframe)</a>
-</li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleDataPoint">DoubleDataPoint (class in ivwdataframe)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.DoubleMat2Property">DoubleMat2Property (class in inviwopy.properties)</a>
 </li>
@@ -8572,8 +8540,6 @@
 </li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn">FloatColumn (class in ivwdataframe)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatDataPoint">FloatDataPoint (class in ivwdataframe)</a>
-</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.FloatMat2Property">FloatMat2Property (class in inviwopy.properties)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.FloatMat2RefProperty">FloatMat2RefProperty (class in inviwopy.properties)</a>
@@ -8706,6 +8672,20 @@
       </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.getApp">getApp() (in module inviwopy)</a>
 </li>
+      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.getAsString">getAsString() (ivwdataframe.DoubleColumn method)</a>
+
+      <ul>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.getAsString">(ivwdataframe.FloatColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.getAsString">(ivwdataframe.Int64Column method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn.getAsString">(ivwdataframe.IntColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn.getAsString">(ivwdataframe.Size_tColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn.getAsString">(ivwdataframe.UIntColumn method)</a>
+</li>
+      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.InviwoApplication.getBasePath">getBasePath() (inviwopy.InviwoApplication method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.Inport.getChangedOutports">getChangedOutports() (inviwopy.Inport method)</a>
@@ -8972,6 +8952,8 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.getEvent">getEvent() (inviwopy.PickingEvent method)</a>
 </li>
+      <li><a href="_generated/ivwdataframe.html#ivwdataframe.CategoricalColumn.getId">getId() (ivwdataframe.CategoricalColumn method)</a>
+</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyOwner.getIdentifier">getIdentifier() (inviwopy.properties.PropertyOwner method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.Processor.getInport">getInport() (inviwopy.Processor method)</a>
@@ -9054,16 +9036,14 @@
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyOwner.getPropertiesRecursive">getPropertiesRecursive() (inviwopy.properties.PropertyOwner method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.ProcessorNetwork.getProperty">getProperty() (inviwopy.ProcessorNetwork method)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyOwner.getPropertyByIdentifier">getPropertyByIdentifier() (inviwopy.properties.PropertyOwner method)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyOwner.getPropertyByPath">getPropertyByPath() (inviwopy.properties.PropertyOwner method)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.getRow">getRow() (ivwdataframe.DataFrame method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferFlatMultiInport.getSourceVectorData">getSourceVectorData() (inviwopy.data.BufferFlatMultiInport method)</a>
 
       <ul>
@@ -10176,8 +10156,6 @@
 </li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column">Int64Column (class in ivwdataframe)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64DataPoint">Int64DataPoint (class in ivwdataframe)</a>
-</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Int64MinMaxProperty">Int64MinMaxProperty (class in inviwopy.properties)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Int64Property">Int64Property (class in inviwopy.properties)</a>
@@ -10191,8 +10169,6 @@
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.INT8">INT8 (inviwopy.data.formats.DataFormatId attribute)</a>
 </li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn">IntColumn (class in ivwdataframe)</a>
-</li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntDataPoint">IntDataPoint (class in ivwdataframe)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.InteractionEvent">InteractionEvent (class in inviwopy)</a>
 </li>
@@ -12822,8 +12798,6 @@
 </li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn">Size_tColumn (class in ivwdataframe)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tDataPoint">Size_tDataPoint (class in ivwdataframe)</a>
-</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Size_tMinMaxProperty">Size_tMinMaxProperty (class in inviwopy.properties)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Size_tProperty">Size_tProperty (class in inviwopy.properties)</a>
@@ -12874,20 +12848,6 @@
       </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.TouchState.Stationary">Stationary (inviwopy.TouchState attribute)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleDataPoint.str">str (ivwdataframe.DoubleDataPoint property)</a>
-
-      <ul>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatDataPoint.str">(ivwdataframe.FloatDataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64DataPoint.str">(ivwdataframe.Int64DataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntDataPoint.str">(ivwdataframe.IntDataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tDataPoint.str">(ivwdataframe.Size_tDataPoint property)</a>
-</li>
-        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntDataPoint.str">(ivwdataframe.UIntDataPoint property)</a>
-</li>
-      </ul></li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.StringOption">StringOption (class in inviwopy.properties)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.StringProperty">StringProperty (class in inviwopy.properties)</a>
@@ -13059,8 +13019,6 @@
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.UINT8">UINT8 (inviwopy.data.formats.DataFormatId attribute)</a>
 </li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn">UIntColumn (class in ivwdataframe)</a>
-</li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntDataPoint">UIntDataPoint (class in ivwdataframe)</a>
 </li>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.umat2">umat2 (class in inviwopy.glm)</a>
 </li>
