Core/Various: TemplateOptionProperty renamed to OptionProperty

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -28,6 +28,8 @@
 <body>
 <h2>2022-06-27 New processor: Volume Region Mapper</h2>
 <p>The <code class="notranslate">Volume Region Mapper</code> processor maps each unique voxel value of a Volume to another integer value. The value mapping is provided by two DataFrame columns.</p>
+<h2>2022-04-14 TemplateOptionProperty renamed to OptionProperty</h2>
+<p>The old name still works but is now deprecated.</p>
 <h2>2022-03-09 DataFrame filtering and CSV filtering</h2>
 <p>DataFrames can now be filtered with the <code class="notranslate">DataFrame Filter</code> processor or when loading a CSV file with the <code class="notranslate">CSV Source</code> processor. The <code class="notranslate">DataFrame Filter</code> also supports brushing &amp; linking filtering. Filters exist for matching values (<code class="notranslate">int64</code> and <code class="notranslate">double</code> as well as categorical values), ranges, and commented lines.</p>
 <h2>2022-03-04 DataFrame &amp; CategoricalColumn clean-up</h2>
