Volume: Updated regression test workspace

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -38,6 +38,8 @@
 <h2>2022-02-01 Icon Grid View</h2>
 <p>The welcome widget now has an icon grid view with previews of the first canvas in each network.<br>
 The workspace and processor search fields gained new features. One can for example search for all networks with a <code class="notranslate">Volume Raycaster</code> processor that was created by <code class="notranslate">Martin</code> like this: <code class="notranslate">processors:\"Volume Raycaster\" author:Martin"</code>. The tooltip for each search field has more details.</p>
+<h2>2022-01-31 Volume Region Map</h2>
+<p>The processor Volume Region Map has been added.</p>
 <h2>2021-12-09 DataFrame Column Units</h2>
 <p>The <code class="notranslate">DataFrame</code> <code class="notranslate">Column</code> now has a <code class="notranslate">unit</code> member and many processors (<code class="notranslate">PCP</code>, <code class="notranslate">ScatterPlot</code>, <code class="notranslate">DataFrameTable</code>), operating on DataFrames will now also display the column units if available. The <code class="notranslate">ColumnMetaDataProperty</code> used in the <code class="notranslate">CSVSource</code> processor got support for specifying units.</p>
 <h2>2021-12-09 Volume Units</h2>
