Core/Various: help review updates

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -42,11 +42,11 @@ Functions and structs moved from <code class="notranslate">core/util/stdextensio
 This means that it might be necessary to include <code class="notranslate">core/util/glm.h</code> where needed.<br>
 In addition, the glm utility functions <code class="notranslate">util::rank()</code>, <code class="notranslate">util::extent()</code>, and <code class="notranslate">util::is_floating_point()</code> are now part of <code class="notranslate">core/util/glmutils.h</code>.</p>
 <h2>2022-08-11 InviwoSetupInfo</h2>
-<p>The module setup info in a workspace file will not only save information about processors and modules used in the workspace.</p>
+<p>The module setup info in a workspace file will now only save information about processors and modules used in the workspace.</p>
 <h2>2022-07-11 Help</h2>
 <p>Alt/Option clicking a processor in the processor network will now show the help for the given processor.</p>
 <h2>2022-07-11 Append workspace</h2>
-<p>The file manu gained an "Append" function to append a workspace into an existing workspace. Holding down Alt/Option in the file lists (Recent/Examples/Tests) will also append the workspace instead of opening it.</p>
+<p>An "Append" function was added to the File menu to append a workspace into an existing workspace. Holding down Control/Command in the file lists (Recent/Examples/Tests) will also append the workspace instead of opening it.</p>
 <h2>2022-06-27 New processor: Volume Region Mapper</h2>
 <p>The <code class="notranslate">Volume Region Mapper</code> processor maps each unique voxel value of a Volume to another integer value. The value mapping is provided by two DataFrame columns.</p>
 <h2>2022-04-14 TemplateOptionProperty renamed to OptionProperty</h2>
