--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -38,7 +38,7 @@ Tags::GL,                       <span class="pl-c"><span class="pl-c">//</span> 
 <span class="pl-s">    Renders multiple instances of a mesh.</span>
 <span class="pl-s">    Each instance can be modified using uniform data provided </span>
 <span class="pl-s">    from a set of dynamic inports holding vectors of data. </span>
-<span class="pl-s">    The the number of inport and types can be controlled using</span>
+<span class="pl-s">    The number of inports and types can be controlled using</span>
 <span class="pl-s">    a List Property.</span>
 <span class="pl-s">    </span>
 <span class="pl-s">    The rendering will happen along these lines:</span>
@@ -62,7 +62,7 @@ One can refer to images like so:</p>
 <p>or networks</p>
 <div class="highlight highlight-source-c++"><pre><span class="pl-s"><span class="pl-pds">"</span>[basegl/instance_renderer.inv](file:///&lt;modulePath&gt;/data/workspaces/instance_renderer.inv)<span class="pl-pds">"</span></span></pre></div>
 <p>Images will be shown inline, and clicking on processor network will append them to the current network.<br>
-To be able to refer to files there are two placeholder <code class="notranslate">&lt;basePath&gt;</code> and <code class="notranslate">&lt;modulePath&gt;</code> the former will refer to the base path of the inviwo installation and the later to the current module. Make sure that any resources linked are also included in the installer. By default the <code class="notranslate">data</code> directory and the <code class="notranslate">docs</code> are always included in the installer.</p>
+To be able to refer to files there are two placeholder <code class="notranslate">&lt;basePath&gt;</code> and <code class="notranslate">&lt;modulePath&gt;</code> the former will refer to the base path of the inviwo installation and the latter to the current module. Make sure that any resources linked are also included in the installer. By default the <code class="notranslate">data</code> directory and the <code class="notranslate">docs</code> folders are always included in the installer.</p>
 <p>For Ports a second constructor argument has been added for a help Document like so</p>
 <div class="highlight highlight-source-c++"><pre><span class="pl-en">inport_</span>(<span class="pl-s"><span class="pl-pds">"</span>mesh<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>Mesh to be drawn multiple times<span class="pl-pds">"</span></span>_help)</pre></div>
 <p>the <code class="notranslate">_help</code> suffix will parse the string as markdown and convert it to an inviwo Document.</p>
@@ -78,7 +78,7 @@ To be able to refer to files there are two placeholder <code class="notranslate"
                        {<span class="pl-c1">size2_t</span>(<span class="pl-c1">10000</span>, <span class="pl-c1">10000</span>), ConstraintBehavior::Ignore},
                        <span class="pl-c1">size2_t</span>(<span class="pl-c1">1</span>, <span class="pl-c1">1</span>),
                        InvalidationLevel::Valid}</pre></div>
-<p>The Help widget will automatically show the help text for the processor and combine the with the help text for the ports and properties in a standard way.  The help text for Ports and Properties will also be shown in relevant tooltips.</p>
+<p>The Help widget will automatically show the help text for the processor and combine it with the help text for the ports and properties in a standard way.  The help text for Ports and Properties will also be shown in relevant tooltips.</p>
 <h2>2022-08-15 FMT Version 9.0.0</h2>
 <p>The fmt library was updated to the recent version 9.0.0. There are major breaking changes in the update with respect to using ostream operators and fmt. Previously you could just include <code class="notranslate">fmt/ostream.h</code> and any type that was streamable was not also printable with fmt. That behavior was removed and now you either have to wrap the object with <code class="notranslate">fmt::streamed(x)</code> or add a specialization of fmt::formatter for the type. Most core types in Inviwo that used std::ostream operators have been updated with fmt formatters. For enums we have added two helper classes in <code class="notranslate">ìnviwo/core/util/fmtutils.h</code>,<br>
 <code class="notranslate">FlagFormatter</code> and <code class="notranslate">FlagsFormatter</code> the former for enums and the later for enum flags. See <code class="notranslate">include/inviwo/core/interaction/events/mousebuttons.h</code> for an example. The <code class="notranslate">FlagFormatter</code> class requires that a <code class="notranslate">std::string_view enumToStr(T val)</code> overload exists in the namespace of T.</p>
