Meta: Changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,8 @@
 </style>
 </head>
 <body>
+<h2>2022-09-09 Updated ext/libtiff</h2>
+<p>The libtiff library located in <code class="notranslate">ext/libtiff</code> was updated to the latest release 4.4.0.</p>
 <h2>2022-09-02 Append workspace on Welcome Screen</h2>
 <p>Previously, the File menu received an "Append" functionality which appends a workspace to the current network by holding down Control/Command. This functionality is now also available in the Welcome Screen. The Welcome Screen also no longer immediately closes the current workspace, it is now possible to close the Welcome Screen and continue working without loosing any changes.</p>
 <h2>2022-08-16 New help system</h2>
