Meta: Changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,11 @@
 </style>
 </head>
 <body>
+<h2>2022-09-14 New CompositeProcessor property configuration dialog</h2>
+<p>The long deprecated UsageMode has now been removed and with that the only way to select which properties was shown in a <code class="notranslate">CompositeProcessor</code>.<br>
+To fix that, the <code class="notranslate">CompositeProcessor</code> got a new dialog <code class="notranslate">Configure Properties</code>, accessable from the context menu in the network editor.<br>
+<a target="_blank" rel="noopener noreferrer" href="resources/changelog/configure-properties.png"><img src="resources/changelog/configure-properties.png" alt="Configure Properties" style="max-width: 100%;"></a><br>
+In the dialog one can select which of the properties in the sub network that should be exposed in the <code class="notranslate">CompositeProcessor</code>,It is also possible to mark sub properties as read only or invisible to potentially reduce complexity.</p>
 <h2>2022-09-09 Updated ext/libtiff</h2>
 <p>The libtiff library located in <code class="notranslate">ext/libtiff</code> was updated to the latest release 4.4.0.</p>
 <h2>2022-09-02 Append workspace on Welcome Screen</h2>
